@@ -1,3 +1,12 @@
+2006-06-03  Steve Falkenburg  <sfalken@apple.com>
+
+        Reviewed by hyatt.
+
+        Don't send empty referrers.  Fixes image load fail on Spinneret default content.
+
+        * platform/win/TransferJobWin.cpp:
+        (WebCore::TransferJob::start):
+
 2006-06-02  Adele Peterson  <adele@apple.com>
 
         Reviewed by Darin. 
